modification du requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
+apache-airflow==2.8.3
 black==23.3.0
 fastapi==0.110.0
+flask==2.2
+ipython==8.14.0
 mlflow==2.10.2
 numpy==1.26.3
 pandas==2.1.4
+psycopg2-binary==2.9.7
 pydantic==2.5.2
 pydantic_core==2.14.5
 pylint==2.17.3
