--- a/.github/workflows/mlops.yml
+++ b/.github/workflows/mlops.yml
@@ -1,46 +1,23 @@
-name: Validate code
+name: MLOps Pipeline
 
-on: [push]
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v4
+      - uses: actions/checkout@v2
+      - name: Set up Python
+        uses: actions/setup-python@v2
         with:
-          python-version: "3.11"
-
+          python-version: '3.9'
       - name: Install dependencies
-        run: |
-          make install
-
+        run: make install
       - name: Format code
-        run: |
-          make format
-
-      # - name: Lint with pyLint
-      #   run: |
-      #     make lint
-
-
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-
-    - name: Set up SSH connection
-      uses: webfactory/ssh-agent@v0.5.3
-      with:
-        ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY_2504 }}
-
-    - name: Deploy code to VM
-      run: |
-        ssh -o StrictHostKeyChecking=no alexisperrier@20.51.187.25 << 'EOF'
-          cd /home/alexisperrier/ademe_mlops
-          git pull origin master
-          # Any other commands you need to run
-        EOF
+        run: make format
+      - name: Lint code
+        run: make lint
