--- a/.github/workflows/mlops.yml
+++ b/.github/workflows/mlops.yml
@@ -10,14 +10,31 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up Python
-        uses: actions/setup-python@v2
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v4
         with:
-          python-version: '3.9'
+          python-version: "3.11"
+
       - name: Install dependencies
         run: make install
+
       - name: Format code
         run: make format
-      - name: Lint code
-        run: make lint
+
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up SSH connection
+        uses: webfactory/ssh-agent@v0.5.3
+        with:
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+
+      - name: Deploy code to VM
+        run: |
+          ssh -o StrictHostKeyChecking=no user@vm_address << 'EOF'
+            cd /path/to/project
+            git pull origin main
+            # Any other commands needed for deployment
+          EOF
